--- a/public/styles.css
+++ b/public/styles.css
@@ -52,6 +52,7 @@ header {
   background:#111;
   color:#fff;
   outline: none;
+  font-size: 16px; /* Prevents iOS zoom on focus */
 }
 
 .controls button{
